sandbox/output
AnagramTest.java:8: error: cannot find symbol
        assertTrue(anagram.generate("a").contains("a"));
                   ^
  symbol:   variable anagram
  location: class AnagramTest
1 error
